--- a/flask_logging_ui/templates/logs.html
+++ b/flask_logging_ui/templates/logs.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="static/bootstrap.min.css">
     <link rel="stylesheet" href="static/bootstrap-flex.min.css">
     <script src="static/bootstrap.min.js"></script>
-    <title>LogsSpa</title>
+    <title>LoggingWebUI</title>
   </head>
   <body>
     <div id="app"></div>
